# proj_lab

./: .gitmodules  CMakeLists.txt  README.md  class_diagram.qmodel
include/: array3d.h  camera.h  frameloader.h  functions.h  header.h  ishaderprogramprovider.h  lightsource.h  loadbeforeframeloader.h  loadruntimeframeloader.h  model.h  myanttweakbar.h  particle.h  particlearrayloader.h  particlesystem.h  projlabshaderprogramprovider.h  shaderloader.h  sphere.h  viewopengl.h
include/glad/: glad.h
shaders/: particlefragment.frag  particlevertex.vert  simplefragment.frag  simplevertex.vert
src/: array3d.cpp  camera.cpp  frameloader.cpp  functions.cpp  glad.cpp  lightsource.cpp  loadbeforeframeloader.cpp  loadruntimeframeloader.cpp  main.cpp  model.cpp  particle.cpp  particlearrayloader.cpp  particlesystem.cpp  particlesystem.cpp.autosave  projlabshaderprogramprovider.cpp  shaderloader.cpp  sphere.cpp  viewopengl.cpp
